--- a/manifests/base/01-carts-dep.yaml
+++ b/manifests/base/01-carts-dep.yaml
@@ -23,8 +23,8 @@ spec:
           args: [ "-cp", "/opt/app.jar", "-Xms64m", "-Xmx128m", "-XX:+UseG1GC", "-Djava.security.egd=file:/dev/urandom", "-Dspring.zipkin.enabled=false", "-Dloader.path=/opt/lib", "org.springframework.boot.loader.PropertiesLauncher", "--port=8080" ]
           resources:
             limits:
-              cpu: 300m
-              memory: 500Mi
+              cpu: 1000m
+              memory: 1024Mi
             requests:
               cpu: 100m
               memory: 200Mi
@@ -45,3 +45,4 @@ spec:
             medium: Memory
       nodeSelector:
         node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/power: ""
