--- a/manifests/base/05-catalogue-dep.yaml
+++ b/manifests/base/05-catalogue-dep.yaml
@@ -26,8 +26,8 @@ spec:
             - -DSN=root:admin@tcp(catalogue-db:3306)/socksdb
           resources:
             limits:
-              cpu: 200m
-              memory: 200Mi
+              cpu: 1000m
+              memory: 1024Mi
             requests:
               cpu: 100m
               memory: 100Mi
@@ -53,3 +53,4 @@ spec:
             periodSeconds: 3
       nodeSelector:
         node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/power: ""
