--- a/manifests/base/11-orders-dep.yaml
+++ b/manifests/base/11-orders-dep.yaml
@@ -24,8 +24,8 @@ spec:
           args: [ "-cp", "/app.jar", "-Xms64m", "-Xmx128m", "-XX:+UseG1GC", "-Djava.security.egd=file:/dev/urandom", "-Dspring.zipkin.enabled=false", "-Dloader.path=/opt/lib", "org.springframework.boot.loader.PropertiesLauncher", "--port=8080" ]
           resources:
             limits:
-              cpu: 500m
-              memory: 500Mi
+              cpu: 1000m
+              memory: 1024Mi
             requests:
               cpu: 100m
               memory: 300Mi
@@ -46,3 +46,4 @@ spec:
             medium: Memory
       nodeSelector:
         node.openshift.io/os_id: rhcos
+        node-role.kubernetes.io/power: ""
